--- a/config/ocaml/compile/BUILD.bazel
+++ b/config/ocaml/compile/BUILD.bazel
@@ -1,6 +1,15 @@
 load("@bazel_skylib//rules:common_settings.bzl",
      "bool_flag", "string_setting")
 
+bool_flag( name = "absname", build_setting_default = True)
+config_setting(name = "absname?", flag_values = {":absname": "True"})
+
+bool_flag( name = "bin-annot", build_setting_default = True)
+config_setting(name = "bin-annot?", flag_values = {":bin-annot": "True"})
+
+bool_flag( name = "principal", build_setting_default = True)
+config_setting(name = "principal?", flag_values = {":principal": "True"})
+
 bool_flag(name = "verbose", build_setting_default = False,
           visibility = ["//visibility:public"])
 config_setting(name = "verbose?", flag_values = {":verbose": "True"})
